# mario-bot

./: .gitignore  README.md  evaluate.py  mario.py  mario_AI.py  pyproject.toml  test_env.py  training_schedule.py
configs/: 20260302_Net_RLTrainer_lr0p00025_n_epochs4_batch_size64_gamma0p9_0.json
logs/: logger.py
losses/: ppo_loss.py
models/: policy.py
trainer/: RL_trainer.py  base_trainer.py
utils/: augment.py  data_reader.py  dataset.py  logger.py  run_name.py
